--- a/RestaurantListings.UI/src/app/restaurants/restaurants.component.scss
+++ b/RestaurantListings.UI/src/app/restaurants/restaurants.component.scss
@@ -1,11 +1,12 @@
 .container {
-  max-width: 1000px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 15px auto;
   display: flex;
 }
 
 .filters {
-  width: 250px;
+  width: 160px;
   flex-shrink: 0;
 }
 
