--- a/RestaurantListings.UI/src/app/restaurants/restaurant-item/restaurant-item.component.html
+++ b/RestaurantListings.UI/src/app/restaurants/restaurant-item/restaurant-item.component.html
@@ -13,7 +13,7 @@
     </h3>
   </div>
 
-  <app-restaurant-rating [starRating]="restaurant.rating" [userRating]="restaurant.userRating"></app-restaurant-rating>
+  <app-restaurant-rating [starRating]="restaurant.rating" [userRating]="restaurant.userRating" [restaurantId]="restaurant.id"></app-restaurant-rating>
 
   <div class="address">
     {{ restaurant.address }}
